update clean code in contoller and readme