@@ -3,6 +3,7 @@ package com.desafio.desafio.controller;
 import com.desafio.desafio.dto.CandidateDTO;
 import com.desafio.desafio.dto.ContestDTO;
 import com.desafio.desafio.entity.CandidateEntity;
+import com.desafio.desafio.mapper.CandidateMapper;
 import com.desafio.desafio.service.ContestService;
 import com.desafio.desafio.mapper.ContestMapper;
 import io.swagger.v3.oas.annotations.tags.Tag;
@@ -13,78 +14,66 @@ import org.springframework.web.bind.annotation.*;
 import java.util.List;
 import java.util.stream.Collectors;
 
-@Tag(name = "Concursos", description = "Endpoints para gerenciar concursos")
 @RestController
 @RequestMapping("/concursos")
+@Tag(name = "Concursos", description = "Endpoints para gerenciar concursos")
 public class ContestController {
 
     private final ContestService contestService;
+    private final ContestMapper contestMapper;
+    private final CandidateMapper candidateMapper;
 
-    public ContestController(ContestService contestService) {
+    public ContestController(
+            ContestService contestService,
+            ContestMapper contestMapper,
+            CandidateMapper candidateMapper
+    ) {
         this.contestService = contestService;
+        this.contestMapper = contestMapper;
+        this.candidateMapper = candidateMapper;
     }
 
     @GetMapping("/candidatos/{codigoConcurso}")
     public ResponseEntity<List<CandidateDTO>> listarCandidatosPorConcurso(@PathVariable String codigoConcurso) {
         List<CandidateEntity> candidatos = contestService.listarCandidatosPorCodigoConcurso(codigoConcurso);
-
-        if (candidatos.isEmpty()) {
-            return ResponseEntity.notFound().build();
-        }
-
-        List<CandidateDTO> candidatosDto = candidatos.stream()
-                .map(candidate -> {
-                    CandidateDTO dto = new CandidateDTO();
-                    dto.setIdCandidate(candidate.getIdCandidate());
-                    dto.setNomeCandidate(candidate.getNomeCandidate());
-                    dto.setCpf(candidate.getCpf());
-                    dto.setDateNasc(candidate.getDateNasc());
-                    dto.setProfissoes(candidate.getProfissoes());
-                    return dto;
-                })
-                .collect(Collectors.toList());
-
-        return ResponseEntity.ok(candidatosDto);
+        if (candidatos.isEmpty()) return ResponseEntity.notFound().build();
+        return ResponseEntity.ok(candidateMapper.toDTOList(candidatos));
     }
 
     @PostMapping
     public ResponseEntity<ContestDTO> criar(@RequestBody ContestDTO contestDto) {
-        ContestDTO criado = ContestMapper.toDTO(contestService.salvar(ContestMapper.toEntity(contestDto)));
+        var criado = contestMapper.toDTO(contestService.salvar(contestMapper.toEntity(contestDto)));
         return ResponseEntity.status(HttpStatus.CREATED).body(criado);
     }
 
     @GetMapping
     public ResponseEntity<List<ContestDTO>> listarTodos() {
-        List<ContestDTO> lista = contestService.listarTodos()
-                .stream()
-                .map(ContestMapper::toDTO)
-                .collect(Collectors.toList());
-        return ResponseEntity.ok(lista);
+        return ResponseEntity.ok(
+                contestService.listarTodos().stream().map(contestMapper::toDTO).toList()
+        );
     }
 
     @GetMapping("/{id}")
     public ResponseEntity<ContestDTO> buscarPorId(@PathVariable Long id) {
         return contestService.buscarPorId(id)
-                .map(ContestMapper::toDTO)
+                .map(contestMapper::toDTO)
                 .map(ResponseEntity::ok)
                 .orElse(ResponseEntity.notFound().build());
     }
 
     @PutMapping("/{id}")
     public ResponseEntity<ContestDTO> atualizar(@PathVariable Long id, @RequestBody ContestDTO contestDto) {
-        ContestDTO atualizado = contestService.atualizar(id, ContestMapper.toEntity(contestDto))
-                .map(ContestMapper::toDTO)
-                .orElse(null);
-
-        if (atualizado == null) {
-            return ResponseEntity.notFound().build();
-        }
-        return ResponseEntity.ok(atualizado);
+        return contestService.atualizar(id, contestMapper.toEntity(contestDto))
+                .map(contestMapper::toDTO)
+                .map(ResponseEntity::ok)
+                .orElse(ResponseEntity.notFound().build());
     }
 
     @DeleteMapping("/{id}")
     public ResponseEntity<Void> deletar(@PathVariable Long id) {
-        boolean deletado = contestService.deletar(id);
-        return deletado ? ResponseEntity.noContent().build() : ResponseEntity.notFound().build();
+        return contestService.deletar(id)
+                ? ResponseEntity.noContent().build()
+                : ResponseEntity.notFound().build();
     }
 }
+
